feat(chat): 实现聊天提及高亮功能