@@ -3,11 +3,14 @@ package cn.qihuang02.cyyn.client.chat;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.UnmodifiableView;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
 
 public final class ClientMentionGroupTokens {
     private static final Object LOCK = new Object();
     private static final List<String> TOKENS = new ArrayList<>();
+    private static int REVISION;
 
     public static void updateTokens(@NotNull Collection<String> tokens) {
         synchronized (LOCK) {
@@ -17,12 +20,19 @@ public final class ClientMentionGroupTokens {
                     TOKENS.add(token);
                 }
             }
+            REVISION++;
         }
     }
 
     public static @NotNull @UnmodifiableView List<String> getTokens() {
         synchronized (LOCK) {
-            return Collections.unmodifiableList(new ArrayList<>());
+            return List.copyOf(TOKENS);
+        }
+    }
+
+    public static int getRevision() {
+        synchronized (LOCK) {
+            return REVISION;
         }
     }
 }
